<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".activities.SubmitProjectActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/submit_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/black">
                    <FrameLayout
                        android:id="@+id/back_button"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_up_button"
                            tools:ignore="VectorDrawableCompat" />
                    </FrameLayout>

                    <ImageView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/back_button"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/project_submission"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:padding="25dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtxt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edit_text_grey"
                    android:drawablePadding="0dp"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@android:color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtxt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edit_text_grey"
                    android:drawablePadding="0dp"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@android:color/black"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtxt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_edit_text_grey"
                android:drawablePadding="0dp"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/name_container"
                app:layout_constraintStart_toStartOf="@+id/name_container"
                app:layout_constraintTop_toBottomOf="@id/name_container" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtxt_github_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_edit_text_grey"
                android:drawablePadding="0dp"
                android:hint="@string/project_on_github_link"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/name_container"
                app:layout_constraintStart_toStartOf="@+id/name_container"
                app:layout_constraintTop_toBottomOf="@id/edtxt_email" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="@+id/name_container"
                app:layout_constraintStart_toStartOf="@+id/name_container"
                app:layout_constraintTop_toBottomOf="@+id/edtxt_github_link">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/holo_orange_dark"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/name_container"
                    app:layout_constraintStart_toStartOf="@+id/name_container"
                    app:layout_constraintTop_toBottomOf="@+id/edtxt_github_link" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>